--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "easy-bem": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-indiana-drag-scroll": "^1.6.1",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.4.1",
     "yarn": "^1.22.4"
   },
