--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debounce": "^1.2.0",
     "easy-bem": "^1.0.2",
     "react": "^16.13.1",
+    "react-card-flip": "^1.0.10",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-indiana-drag-scroll": "^1.6.1",
